# dining_philosophers

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  config.hpp  display.cpp  display.hpp  fork.hpp  philosopher.cpp  philosopher.hpp  table.cpp  table.hpp  waiter.hpp  waitress.hpp
